@@ -37,6 +37,6 @@
 #ifndef _SUDO_VERSION_H
 #define _SUDO_VERSION_H
 
-static const char version[] = "1.6.3p4";
+static const char version[] = "1.6.3p5";
 
 #endif /* _SUDO_VERSION_H */
